<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D2657"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.multiplyClasses.MultiplyActivity">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <TextView
                android:fontFamily="@font/font"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/score"
                android:textColor="#FFC107"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:fontFamily="@font/font"
                android:id="@+id/setScore"
                android:layout_width="60sp"
                android:layout_height="37dp"
                android:layout_margin="7dp"
                android:background="@drawable/sub_back2"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="#009688"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:fontFamily="@font/font"
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/life"
                android:textColor="#FFFFC107"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.79"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45" />

            <TextView
                android:fontFamily="@font/font"
                android:id="@+id/setLife"
                android:layout_width="60sp"
                android:layout_height="37dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/sub_back2"
                android:gravity="center"
                android:text="@string/_3"
                android:textColor="#F10000"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBarSetTime"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="40"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/multuply_back_btn"
        android:orientation="vertical">

        <TextView
            android:fontFamily="@font/ubuntumedium"
            android:id="@+id/setQuestion"
            android:layout_width="350dp"
            android:layout_height="98dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/textview1"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:fontFamily="@font/ubuntumedium"
                android:id="@+id/option1"
                android:background="@drawable/multuply_back_btn"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/textview"

                />

            <TextView
                android:fontFamily="@font/ubuntumedium"
                android:id="@+id/option2"
                android:layout_width="150dp"
                android:background="@drawable/multuply_back_btn"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/textview"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:textStyle="bold"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/ubuntumedium"
                android:id="@+id/option3"
                android:background="@drawable/multuply_back_btn"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/textview"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:textStyle="bold"
                />

            <TextView
                android:fontFamily="@font/ubuntumedium"
                android:id="@+id/option4"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:text="@string/textview"
                android:textColor="@color/white"
                android:background="@drawable/multuply_back_btn"
                android:textSize="42sp"
                android:textStyle="bold"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>